--- a/styles.scss
+++ b/styles.scss
@@ -11,10 +11,24 @@
     font-family: "Montserrat", sans-serif;
     .container {
       border-radius: 7px;
-      background-color: rgba(0, 0, 0, 0.274);
+      background-color: rgba(0, 0, 0, 0.705);
       border: 3px solid black;
       padding: 45px;
       color: white;
+      .buscador {
+          input {
+              border-radius: 5px;
+                padding: 6px;
+            }
+            button{
+                border-radius: 5px;
+                padding: 4px;
+                &:hover {
+                    background-color: black;
+                    color: white;
+                }
+            }
+      }
     }
   }
 }
