--- a/styles.scss
+++ b/styles.scss
@@ -2,10 +2,12 @@
   margin: 0px;
   box-sizing: border-box;
   body {
+    max-height: 400px;
+    max-width: 400px;
     font-size: 1.5em;
     display: flex;
-    background: url(night-lights-road-tower-wallpaper-preview.jpg) no-repeat
-      center center fixed;
+    background-image:   url(/night-lights-road-tower-wallpaper-preview.jpg) ;
+    background-size: auto;
     justify-content: center;
     align-items: center;
     font-family: "Montserrat", sans-serif;
@@ -31,4 +33,18 @@
       }
     }
   }
+ 
 }
+
+@media (min-width: 400px) { 
+  *{
+body{
+  font-size: 0.8em;
+  color:green;
+}
+
+
+  }
+
+
+ }
