--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,12 @@
 }
 
 * body {
-  font-size: 1.5em;
+  max-height: 1440px;
+  max-width: 1440px;
+  font-size: 2.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: url(night-lights-road-tower-wallpaper-preview.jpg) no-repeat center center fixed;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -30,6 +31,7 @@
 * body .container .buscador input {
   border-radius: 5px;
   padding: 6px;
+  margin: .8em .8em .8em 0;
 }
 
 * body .container .buscador button {
@@ -40,4 +42,27 @@
 * body .container .buscador button:hover {
   background-color: black;
   color: white;
+}
+
+@media (max-width: 600px) {
+  * body {
+    font-size: 1em;
+  }
+  * body .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
