--- a/styles.scss
+++ b/styles.scss
@@ -2,12 +2,12 @@
   margin: 0px;
   box-sizing: border-box;
   body {
-    max-height: 400px;
-    max-width: 400px;
-    font-size: 1.5em;
+   
+    max-height: 1440px;
+    max-width: 1440px;
+    font-size: 2.5em;
     display: flex;
-    background-image:   url(/night-lights-road-tower-wallpaper-preview.jpg) ;
-    background-size: auto;
+     
     justify-content: center;
     align-items: center;
     font-family: "Montserrat", sans-serif;
@@ -21,6 +21,7 @@
           input {
               border-radius: 5px;
                 padding: 6px;
+                margin: .8em .8em .8em 0;
             }
             button{
                 border-radius: 5px;
@@ -36,11 +37,19 @@
  
 }
 
-@media (min-width: 400px) { 
+@media (max-width: 600px) { 
   *{
 body{
-  font-size: 0.8em;
-  color:green;
+  font-size: 1em;
+  .container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+  }
+ 
+
 }
 
 
