--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,7 @@
   margin: 0px;
   box-sizing: border-box;
   body {
-   
+   margin: auto;
     max-height: 1440px;
     max-width: 1440px;
     font-size: 2.5em;
