--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,17 @@
 
 * body .container .buscador input {
   border-radius: 5px;
-  padding: 6px;
+  padding: 1em;
   margin: .8em .8em .8em 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
 }
 
 * body .container .buscador button {
+  padding: 1em;
   border-radius: 5px;
-  padding: 4px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
 }
 
 * body .container .buscador button:hover {
@@ -65,5 +69,22 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    padding: 0.7em;
+  }
+  * body .container .buscador input, * body .container .buscador button {
+    padding: 0.4em;
+  }
+  * body .container div {
+    margin-top: 1em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
