--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
 * body .container .buscador input {
   border-radius: 5px;
   padding: 1em;
-  margin: .8em .8em .8em 0;
+  margin: 0.8em 0.8em 0.8em 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
@@ -71,7 +71,8 @@
             justify-content: center;
     padding: 0.7em;
   }
-  * body .container .buscador input, * body .container .buscador button {
+  * body .container .buscador input,
+  * body .container .buscador button {
     padding: 0.4em;
   }
   * body .container div {
